--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@tauri-apps/api": "^1",
     "antd": "^5.20.4",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.1.6",
     "html-react-parser": "^5.1.15",
     "react": "^18.2.0",
