--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,8 @@ lettre = "0.11.8"
 native-tls = "0.2.12"
 imap = "2.4.1"
 mailparse = "0.15.0"
-uuid = { version = "1.10.0", features = ["v4"] }
+sha2 = "0.10.8"
+hex = "0.4.3"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
